--- a/html/Y1-1.css
+++ b/html/Y1-1.css
@@ -16,9 +16,10 @@ header {
 
 
 .hotelCard img {
-  object-fit: cover;
-  width: 100%;
-  height: 40vh;
+  box-sizing: border-box;
+    width: 100%;
+    height: 400px;
+    background-size: cover; 
 }
 
 .bookButton {
